--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+server.error.include-message=always
+server.error.include-binding-errors=always
